# eink-home-display-rust

./: .gitignore  Cargo.toml
config/: default.toml
src/: application.rs  cli.rs  lib.rs  main.rs  settings.rs
src/adapters/: mod.rs
src/adapters/display_image_generator/: mod.rs
src/adapters/display_image_generator/chrome_render/: chrome_render_display_image_generator.rs  generate_1bit.rs  mod.rs
src/adapters/display_output/: mod.rs
src/adapters/display_output/eink_waveshare/: mod.rs  output.rs
src/adapters/display_output/file_output/: mod.rs  output.rs
src/adapters/image_display_service/: mod.rs
src/adapters/image_display_service/eink_waveshare/: eink_driver.rs  mod.rs  output.rs
src/adapters/image_repository/file_store/: file_store_image_repository.rs  mod.rs
src/adapters/weather/open_weather/: mod.rs  open_weather_weather_service.rs  response.rs  tests.rs
src/config/: application.rs  mod.rs  open_weather.rs  weather.rs
src/domain/models/: image.rs  location.rs  mod.rs  output.rs  weather.rs
src/domain/services/: display_image_generator.rs  display_output.rs  generate_1bit.rs  generate_screenshot.rs  image_display_service.rs  image_repository.rs  mod.rs  weather_service.rs
templates/: dashboard.html
