[package]
name = "eink-home-display-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
headless_chrome = { version = "1.0.12", features = ["fetch"] }
anyhow = "1.0.86"
derive-new = "0.6.0"
reqwest = { version = "0.12",     features = ["json", "rustls-tls"],  default-features = false  }
tokio = { version = "1", features = ["full"] }
trait-variant = "0.1.2"
serde = { version = "1.0", features = ["derive"] }
config = { version = "0.14.0", features = ["toml"] }
thiserror = "1.0"
log = "0.4.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1.0.120"
handlebars = "6.0.0"
tempfile = "3.10.1"
image = "0.25.2"