[package]
name = "eink-home-display-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5", features = ["derive"] }
config = { version = "0.14.0", features = ["toml"] }
derive-new = "0.6.0"
handlebars = "6.0.0"
headless_chrome = { version = "1.0.12", features = ["fetch"] }
image = "0.25.2"
log = "0.4.22"
reqwest = { version = "0.12", features = [
    "json",
    "rustls-tls",
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.120"
serde_valid = { version = "0.24.0", features = ["toml"] }
tempfile = "3.10.1"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
trait-variant = "0.1.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1.81"
